Adjust avatar sizes & Fix horizontal overflow in chat history

--- a/src/frontend/commons/style.css
+++ b/src/frontend/commons/style.css
@@ -34,8 +34,8 @@ label {
 
 .avatar {
     margin-right: .5em;
-    width: 1.5em;
-    height: 1.5em;
+    width: 2.5em;
+    height: 2.5em;
     border-radius: 50%;
 }
 
